--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Cedarville+Cursive&display=swap');
 
 .App {
-  text-align: center;
   display: flex;
+  height: 49em;
+  width: 94.97em;
+  text-align: center;
   align-items: center;
   flex-direction: column;
-  background-size: cover;
-  background-repeat: no-repeat;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+  justify-content: center;
 }
 
 @media (prefers-reduced-motion: no-preference) {
@@ -74,4 +70,16 @@
 button {
   width: fit-content;
   margin: 5px;
+}
+
+.species {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+}
+
+.animal {
+  background-color: bisque;
+  margin: 1px;
+  border: 1px solid orange;
 }
