--- a/src/App.css
+++ b/src/App.css
@@ -100,3 +100,9 @@ button {
   border-radius: 2px;
   font-family: 'Lobster', cursive;
 }
+
+.admin-page {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
